<resources>
  <string name="app_name">Donation</string>
  <string name="accept">Accept</string>
  <string name="donate">Donate</string>
  <string name="reject">Reject</string>
  <string name="to">To</string>
  <string name="subject">Subject</string>
  <string name="message">Message</string>
  <string name="send">Send</string>

  <string name="donateTitle">Welcome Homer</string>
  <string name="donateSubtitle">Please give generously</string>
  <string name="PayPal">PayPal</string>
  <string name="Direct">Direct</string>
  <string name="amount">Amount:</string>
  <string name="donateButton">Donate</string>
  <string name="initialAmount">0</string>
  <string name="amountSoFarLabel">Total so far:</string>
  <string name="donation">Donation</string>
</resources>

